k8s/lab4/policies/allow-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-express-ingress
  namespace: demo-a
spec:
  podSelector:
    matchLabels:
      app: lab1-express
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: demo-a # ← fixed label
      ports:
        - protocol: TCP
          port: 3000
