k8s/lab4/policies/deny-all-b.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: demo-b
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
